<resources>
    <string name="app_name">Fiszki</string>
    <string name="download_data">Pobieranie danych..</string>
    <string name="plToEng">Najpierw polska strona fiszki potem angielska</string>
    <string name="engToPl">Najpierw angielska strona fiszki potem polska</string>
    <string name="showResponse">Pokaż odpowiedź</string>
    <string name="know">Wiedziałem</string>
    <string name="dont_know">Nie wiedziałem</string>
    <string name="yes_label">Tak</string>
    <string name="no_label">Nie</string>
    <string name="ok_label">OK</string>
    <string name="polish_word">Polskie słowo</string>
    <string name="english_word">Angielskie słowo</string>
    <string name="create_fiche">Stwórz fiszkę</string>
    <string name="your_stats">Twoje statystyki</string>
    <string name="learn_more_info">Musisz nauczyć się co najmniej 30 fiszek dla powtórki</string>
    <string name="in_progress">W trakcie nauki</string>
    <string name="to_learn">Do nauczenia się</string>
    <string name="learn_time">Łączny czas nauki</string>
    <string name="daily_learn_time">Dzienny czas nauki</string>
    <string name="your_progresses">Twoje postępy</string>
    <string name="zero_percent">0%</string>
    <string name="zero_minutes">dd:hh:mm:ss</string>
    <string name="zero_pre_x">0/100</string>

    <string name="add_fiche_instruction">Pomóż nam rozwijać aplikację!
    Wystarczy, że dodasz wymyśloną przez siebie fiszkę, a my po jej zweryfikowaniu udostępnimy dla użytkowników!</string>
    <string name="recreateLocal">Brak dostępu do sieci\nTworzenie bazy z pamięci lokalnej</string>
    <string name="add_fiche_instruction">Dodaj własną fiszkę do pamięci telefonu </string>


    <string name="fill_all_fields">Uzupełnij wszystkie pola</string>
    <string name="download_actual_database_version">Pobrano aktualną wersję bazy danych</string>
    <string name="no_network">Brak połączenia z siecią!</string>
    <string name="check_network">Sprawdź czy masz dostęp do sieci</string>
    <string name="succesfully_added">Fiszka została dodana do bazy danych</string>
</resources>
